--- a/languages/block-directory.pot
+++ b/languages/block-directory.pot
@@ -1,4 +1,4 @@
-# Copyright (C) 2024 bPlugins LLC
+# Copyright (C) 2024 indione
 # This file is distributed under the GPLv3.
 msgid ""
 msgstr ""
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2024-03-25T08:07:17+01:00\n"
+"POT-Creation-Date: 2024-04-23T19:01:29+02:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.9.0\n"
 "X-Domain: store-finder\n"
@@ -25,11 +25,11 @@ msgid "It will find Your Store Globally."
 msgstr ""
 
 #. Author of the plugin
-msgid "bPlugins LLC"
+msgid "indione"
 msgstr ""
 
 #. Author URI of the plugin
-msgid "http://bplugins.com"
+msgid "https://profiles.wordpress.org/indionetech/"
 msgstr ""
 
 #: inc/store-finder-menu-page.php:33
